
== Fixes ==
* Items without slot are no longer placed on hotbar

== Plugin ==
* PlayerClass is renamed to Kit
* Class name is no longer required in the Kit

== Gameplay ==
* Items can have cooldown before the first use
* Weapons can now run actions on targets instead of damaging them directly

== Content ==
* Add "wingsOff" action
* Add "sprintStarting" action
* Add "explosion" action
* Add "blockStanding" activator
* "health" action can scale amount with distance between source and target
* "particleGun" attack has configurable range
* "leftClick" and "rightClick" were changed to Triggers
* "slowTick" was changed to more configurable "interval"

###############
# Flier 0.5.0 #
###############

 == API ==
* Added Modification API
* Added Effect API

 == Plugin ==
* Improved error messages
* Added translations
* Added location picking tool (/flier coordinator)
* Added Multiverse to optional dependencies
* Improved lobby control commands (/flier lobby)
* Lobby and game loading now happens after all plugins are enabled
* Fixed problems with too long sidebar lines

 == Gameplay ==
* Added reloading time on the experience bar
* Fixed air weapons usable on the ground
* Disabled health regeneration while in-game
* Compass points to lobby spawn if no players are present
* Added requirements to item buttons
* Players on the ground are flashing constantly

 == Lobby ==
* Moved item buttons from lobby to game
* Added optional permissions for buttons
* Added optional maximum game per lobby limit
* Added arenas to allow concurrent games
* Added automatic lobby joining
* Added automatic game starting

 == Game ==
* Added minimum amount of players required for the game to start
* Added maximum amount of players in game
* Added optional game start delay
* Added optional respawn delay
* Players will wait in the waiting room during these delays
* The game can be locked after starting
* Added optional maximum game time
* Added support for optional rounds in games